# Cascade

./: .gitignore  LICENSE  README.md
.github/: copilot-instructions.md
benchmark/: __init__.py  config.py  data_generator.py  data_generator_optimized.py  data_generator_real.py  run_benchmark.py  shared_data.py
benchmark/adapters/: __init__.py  base.py  cascade_adapter.py  hdf5_adapter.py  lmcache_adapter.py  pdc_adapter.py  redis_adapter.py
benchmark/kv_extractor/: Makefile  extract_real_kv.py  kv_aggregator.cpp
benchmark/scripts/: 3tier_5sys_bench.sh  3tier_v2_bench.sh  5sys_v2.sh  all5_bench.sh  all5_large_bench.sh  bench_cascade_cpp.sh  build_cascade_cpp.sh  build_py_final.sh  build_python.sh  build_python_v2.sh  compare_5sys.sh  cpp_full_bench.sh  debug_kv_test.sh  fair_large_bench.sh  fair_lustre_bench.sh  fair_simple_bench.sh  fair_tier_bench.sh  fair_tier_v2.sh  fair_v3_bench.sh  fair_v4_bench.sh  full_5systems_bench.sh  full_6sys_bench.sh  full_cpp_systems_bench.sh  generate_data.sh  generate_kv.sh  generate_real_data.sh  generate_real_kv.sh  generate_shared_data.sh  gpu_vram_5sys.sh  proper_bench.sh  real_5sys_v2.sh  real_5systems_bench.sh  real_6sys_bench_48439677.py  real_6systems_bench.sh  real_6systems_bench_v2.sh  real_6systems_bench_v3.sh  real_all5.sh  real_bench.sh  real_benchmark.sh  real_systems_bench.sh  (+11 more)
benchmark/scripts/benchmark/results/: full_6sys_48440157.txt
cascade_Code/: README.md
cascade_Code/cpp/: CMakeLists.txt  build_perlmutter.sh  run_3tier_bench.sbatch  run_accurate_bench.sbatch  run_long_bench.sbatch
cascade_Code/cpp/include/: cascade.hpp
cascade_Code/cpp/python/: bindings.cpp
cascade_Code/cpp/src/: benchmark.cpp  cascade_core.cpp  fair_tier_bench.cpp  full_benchmark.cpp  gpu_backend.cu  pure_memcpy_bench.cu
docs/: BENCHMARK.md  DEVELOPMENT.md  PAPER.md
paper/: 1. Introduction.tex  2. Background.tex  3. Design.tex  4. Evaluation.tex  5. Related Works.tex  6. Discussion and Limitation.tex  7. Conclusion.tex  generate_figures.py  generate_figures_png.py  main.tex  references.bib
